sonarqube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarqube-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - scan.sonarqube.me
      secretName: auth-tls-secret-sonarqube
  rules:
    - host: scan.sonarqube.me
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: sonarqube-sonarqube
                port:
                  number: 9000
